--- a/index.html
+++ b/index.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>David Alim's personal site</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<h1>Hello World!!!</h1>
+<html lang="en">
+  <head>
+    <title>David Alim's professional portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Carme"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>David Francisco Alim</h1>
+      <h2>Full Stack Web Developer</h2>
+    </header>
 
-<p>This is the exceedingly plain, boring personal site of David Alim, aspiring Web Developer</p>
-<p>I hope to make this look nice someday</p>
-
-</body>
+    <main role="main">
+      <section aria-labelledby="Projects" class="projects">
+        <div class="project">
+          <h2>Fantasy Baseball Player Lookup</h2>
+          <img
+            src="https://github.com/spartanindc/fantasybaseballlookup/raw/master/FBSL_results.png"
+            alt="FBPL page image"
+          />
+          <p>
+            Using MySportsFeeds API to pull relevant baseball stats information
+            for fantasy players
+          </p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Jquery</li>
+          </ul>
+          <a href="https://github.com/spartanindc/fantasybaseballlookup">Code</a
+          ><a href="https://spartanindc.github.io/fantasybaseballlookup"
+            >Live Site</a
+          >
+        </div>
+        <div class="project">
+          <h2>Countdown</h2>
+          <img
+            src="https://github.com/spartanindc/countdown/raw/master/cd-screenshot.png"
+            alt="Countdown example gage"
+          />
+          <p>
+            An app to keep track of important dates and how much time is left
+            until those dates arrive
+          </p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Jquery</li>
+          </ul>
+          <a href="https://github.com/spartanindc/countdown">Code</a
+          ><a href="https://countdown-thinkful.herokuapp.com/">Live Site</a>
+        </div>
+        <div class="project">
+          <h2>Looking for Gamers</h2>
+          <img
+            src="https://github.com/spartanindc/LFG/raw/master/images/dashboard.png"
+            alt="LFG example dashboard"
+          />
+          <p>App to help gamers find like-minded people to meet up and play</p>
+          <ul>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>MongoDB</li>
+            <li>Mongoose</li>
+            <li>Express</li>
+          </ul>
+          <a href="https://github.com/spartanindc/LFG">Code</a
+          ><a href="https://lfg-thinkful.herokuapp.com/">Live Site</a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="github.com/spartanindc">github</a></li>
+        <li><a href="dfa@davidalim.com">email</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/david-alim-b4425424">linkedin</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
