basic layout and functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       href="https://fonts.googleapis.com/css?family=Carme"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
+    />
+
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -17,7 +22,7 @@
     <main role="main">
       <section aria-labelledby="Projects" class="projects">
         <div class="project">
-          <h2>Fantasy Baseball Player Lookup</h2>
+          <h3>Fantasy Baseball Player Lookup</h3>
           <img
             src="https://github.com/spartanindc/fantasybaseballlookup/raw/master/FBSL_results.png"
             alt="FBPL page image"
@@ -27,18 +32,19 @@
             for fantasy players
           </p>
           <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>Jquery</li>
+            <li>HTML <i class="devicon-html5-plain-wordmark"></i></li>
+            <li>CSS <i class="devicon-css3-plain-wordmark"></i></li>
+            <li>Javascript <i class="devicon-javascript-plain"></i></li>
+            <li>jQuery <i class="devicon-jquery-plain-wordmark"></i></li>
           </ul>
-          <a href="https://github.com/spartanindc/fantasybaseballlookup">Code</a
+          <a href="https://github.com/spartanindc/fantasybaseballlookup"
+            >[Code<i class="devicon-github-plain"></i>]</a
           ><a href="https://spartanindc.github.io/fantasybaseballlookup"
             >Live Site</a
           >
         </div>
         <div class="project">
-          <h2>Countdown</h2>
+          <h3>Countdown</h3>
           <img
             src="https://github.com/spartanindc/countdown/raw/master/cd-screenshot.png"
             alt="Countdown example gage"
@@ -48,37 +54,66 @@
             until those dates arrive
           </p>
           <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>Jquery</li>
+            <li>EJS</li>
+            <li>Node.js <i class="devicon-nodejs-plain"></i></li>
+            <li>MongoDB <i class="devicon-mongodb-plain-wordmark"></i></li>
+            <li>Mongoose</li>
+            <li>Express <i class="devicon-express-original"></i></li>
           </ul>
-          <a href="https://github.com/spartanindc/countdown">Code</a
+          <a href="https://github.com/spartanindc/countdown"
+            >[Code<i class="devicon-github-plain"></i>]</a
           ><a href="https://countdown-thinkful.herokuapp.com/">Live Site</a>
         </div>
         <div class="project">
-          <h2>Looking for Gamers</h2>
+          <h3>Looking for Gamers</h3>
           <img
             src="https://github.com/spartanindc/LFG/raw/master/images/dashboard.png"
             alt="LFG example dashboard"
           />
           <p>App to help gamers find like-minded people to meet up and play</p>
           <ul>
-            <li>React</li>
-            <li>Node.js</li>
-            <li>MongoDB</li>
+            <li>React <i class="devicon-react-original"></i></li>
+            <li>Node.js <i class="devicon-nodejs-plain"></i></li>
+            <li>MongoDB <i class="devicon-mongodb-plain-wordmark"></i></li>
             <li>Mongoose</li>
-            <li>Express</li>
+            <li>Express <i class="devicon-express-original"></i></li>
           </ul>
-          <a href="https://github.com/spartanindc/LFG">Code</a
+          <a href="https://github.com/spartanindc/LFG"
+            >[Code<i class="devicon-github-plain"></i>]</a
           ><a href="https://lfg-thinkful.herokuapp.com/">Live Site</a>
         </div>
+      </section>
+
+      <section class="skills">
+        <h3>Skills</h3>
+        <ul>
+          <li>Git</li>
+          <li>Github</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>jQuery</li>
+          <li>React</li>
+          <li>Redux</li>
+          <li>Node.js</li>
+          <li>Express</li>
+          <li>MongoDB</li>
+          <li>Mongoose</li>
+        </ul>
       </section>
     </main>
     <footer>
       <ul>
-        <li><a href="github.com/spartanindc">github</a></li>
-        <li><a href="dfa@davidalim.com">email</a></li>
+        <li>
+          <a href="github.com/spartanindc"
+            ><i class="devicon-github-plain"></i
+          ></a>
+        </li>
+        <li>
+          <a href="dfa@davidalim.com"
+            ><img src="https://img.icons8.com/nolan/64/000000/gmail.png"
+          /></a>
+        </li>
         <li>
           <a href="https://www.linkedin.com/in/david-alim-b4425424">linkedin</a>
         </li>
