fixes, add responsive

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           ></a>
         </li>
         <li>
-          <a href="dfa@davidalim.com"
+          <a href="mailto: dfa@davidalim.com"
             ><img src="https://img.icons8.com/nolan/64/000000/gmail.png"
           /></a>
         </li>
