--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
       <ul>
         <li>
           <a href="github.com/spartanindc"
-            ><i class="devicon-github-plain"></i
-          ></a>
+            ><img src="https://img.icons8.com/nolan/64/000000/github.png"
+          /></a>
         </li>
         <li>
           <a href="mailto: dfa@davidalim.com"
@@ -115,7 +115,9 @@
           /></a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/david-alim-b4425424">linkedin</a>
+          <a href="https://www.linkedin.com/in/david-alim-b4425424"
+            ><img src="https://img.icons8.com/nolan/64/000000/linkedin.png"
+          /></a>
         </li>
       </ul>
     </footer>
