--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
       <section aria-labelledby="Projects" class="projects">
         <div class="project">
           <h3>Fantasy Baseball Player Lookup</h3>
-          <img
-            src="https://github.com/spartanindc/fantasybaseballlookup/raw/master/FBSL_results.png"
-            alt="FBPL page image"
-          />
+          <img src="./images/fbpl.png" alt="FBPL home page" />
           <p>
             Using MySportsFeeds API to pull relevant baseball stats information
             for fantasy players
           </p>
           <ul>
+            <p>Built with:</p>
             <li>HTML <i class="devicon-html5-plain-wordmark"></i></li>
             <li>CSS <i class="devicon-css3-plain-wordmark"></i></li>
             <li>Javascript <i class="devicon-javascript-plain"></i></li>
@@ -45,15 +43,13 @@
         </div>
         <div class="project">
           <h3>Countdown</h3>
-          <img
-            src="https://github.com/spartanindc/countdown/raw/master/cd-screenshot.png"
-            alt="Countdown example gage"
-          />
+          <img src="./images/countdown.png" alt="Countdown example page" />
           <p>
             An app to keep track of important dates and how much time is left
             until those dates arrive
           </p>
           <ul>
+            <p>Built with:</p>
             <li>EJS</li>
             <li>Node.js <i class="devicon-nodejs-plain"></i></li>
             <li>MongoDB <i class="devicon-mongodb-plain-wordmark"></i></li>
@@ -66,12 +62,10 @@
         </div>
         <div class="project">
           <h3>Looking for Gamers</h3>
-          <img
-            src="https://github.com/spartanindc/LFG/raw/master/images/dashboard.png"
-            alt="LFG example dashboard"
-          />
+          <img src="./images/lfg.png" alt="LFG example dashboard" />
           <p>App to help gamers find like-minded people to meet up and play</p>
           <ul>
+            <p>Built with:</p>
             <li>React <i class="devicon-react-original"></i></li>
             <li>Node.js <i class="devicon-nodejs-plain"></i></li>
             <li>MongoDB <i class="devicon-mongodb-plain-wordmark"></i></li>
