--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
     />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
@@ -20,6 +24,14 @@
     </header>
 
     <main role="main">
+      <div class="container">
+        <div aria-labelledby="About Me" id="about">
+          <p>
+            I'm a recovering public policy wonk now developing for the web,
+            hoping to change the world for the better in a different way.
+          </p>
+        </div>
+      </div>
       <section aria-labelledby="Projects" class="projects">
         <div class="project">
           <h3>Looking for Gamers</h3>
@@ -34,7 +46,7 @@
             <li>Express <i class="devicon-express-original"></i></li>
           </ul>
           <a href="https://github.com/spartanindc/LFG"
-            >[Code<i class="devicon-github-plain"></i>]</a
+            >{Code<i class="devicon-github-plain"></i>}</a
           ><a href="https://lfg-thinkful.herokuapp.com/">Live Site</a>
         </div>
 
@@ -80,23 +92,25 @@
         </div>
       </section>
 
-      <section class="skills">
-        <h3>Skills</h3>
-        <ul>
-          <li>Git</li>
-          <li>Github</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-          <li>jQuery</li>
-          <li>React</li>
-          <li>Redux</li>
-          <li>Node.js</li>
-          <li>Express</li>
-          <li>MongoDB</li>
-          <li>Mongoose</li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="skills">
+          <h3>Skills</h3>
+          <ul>
+            <li>Git</li>
+            <li>Github</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>jQuery</li>
+            <li>React</li>
+            <li>Redux</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>Mongoose</li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer>
       <ul>
