--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
     />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -23,16 +23,16 @@
       <h2>Full Stack Web Developer</h2>
     </header>
 
-    <main role="main">
+    <main>
       <div class="container">
-        <div aria-labelledby="About Me" id="about">
+        <div aria-label="About Me" id="about">
           <p>
             I'm a recovering public policy wonk now developing for the web,
             hoping to change the world for the better in a different way.
           </p>
         </div>
       </div>
-      <section aria-labelledby="Projects" class="projects">
+      <section aria-label="Projects" class="projects">
         <div class="project">
           <h3>Looking for Gamers</h3>
           <img src="./images/lfg.png" alt="LFG example dashboard" />
@@ -93,7 +93,7 @@
       </section>
 
       <div class="container">
-        <section class="skills">
+        <section aria-labelledby="Technical Skills" class="skills">
           <h3>Skills</h3>
           <ul>
             <li>Git</li>
@@ -116,17 +116,23 @@
       <ul>
         <li>
           <a href="github.com/spartanindc"
-            ><img src="https://img.icons8.com/nolan/64/000000/github.png"
+            ><img
+              alt="The Github logo signifying a link to go to David's Github profile"
+              src="https://img.icons8.com/nolan/64/000000/github.png"
           /></a>
         </li>
         <li>
           <a href="mailto: dfa@davidalim.com"
-            ><img src="https://img.icons8.com/nolan/64/000000/gmail.png"
+            ><img
+              alt="A envelope signifying a link to email David"
+              src="https://img.icons8.com/nolan/64/000000/gmail.png"
           /></a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/david-alim-b4425424"
-            ><img src="https://img.icons8.com/nolan/64/000000/linkedin.png"
+            ><img
+              alt="The LinkedIn logo signifying a link to go to David's LinkedIn profile"
+              src="https://img.icons8.com/nolan/64/000000/linkedin.png"
           /></a>
         </li>
       </ul>
