--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       rel="stylesheet"
       href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
     />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
@@ -93,7 +90,7 @@
       </section>
 
       <div class="container">
-        <section aria-labelledby="Technical Skills" class="skills">
+        <section aria-label="Technical Skills" class="skills">
           <h3>Skills</h3>
           <ul>
             <li>Git</li>
