--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>David Alim's professional portfolio</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Carme"
+      href="https://fonts.googleapis.com/css?family=Carme|Permanent+Marker"
       rel="stylesheet"
     />
     <link
@@ -112,7 +112,7 @@
     <footer>
       <ul>
         <li>
-          <a href="github.com/spartanindc"
+          <a href="https://wwww.github.com/spartanindc"
             ><img
               alt="The Github logo signifying a link to go to David's Github profile"
               src="https://img.icons8.com/nolan/64/000000/github.png"
