improvements pt IV

--- a/index.html
+++ b/index.html
@@ -18,21 +18,32 @@
   <body>
     <header>
       <h1>David Francisco Alim</h1>
-      <h2>Full Stack Web Developer</h2>
+      <h2>Full Stack Developer</h2>
     </header>
 
     <main>
       <div class="container">
         <div aria-label="About Me" id="about">
+          <h3>Who am I?</h3>
           <p>
-            I'm a recovering public policy wonk now developing for the web,
-            hoping to change the world for the better in a different way.
+            I'm a recovering public policy wonk switching careers channeling my
+            passion for creating and implementing new ideas into development. I
+            would love to work on a team with talented people to learn new
+            skills and build amazing things.
+          </p>
+          <br />
+          <p>
+            When i'm not coding, i'm reading fantasy or science fiction novels,
+            playing board games or video games, or trying to find time to write
+            the novel that's been in my head for a few years.
           </p>
         </div>
       </div>
       <section aria-label="Projects" class="projects">
+        <h3>Recent Projects</h3>
+
         <div class="project">
-          <h3>Looking for Gamers</h3>
+          <h4>Looking for Gamers</h4>
           <img src="./images/lfg.png" alt="LFG example dashboard" />
           <p>App to help gamers find like-minded people to meet up and play</p>
           <ul>
@@ -49,7 +60,7 @@
         </div>
 
         <div class="project">
-          <h3>Countdown</h3>
+          <h4>Countdown</h4>
           <img src="./images/countdown.png" alt="Countdown example page" />
           <p>
             An app to keep track of important dates and how much time is left
@@ -64,12 +75,12 @@
             <li>Express <i class="devicon-express-original"></i></li>
           </ul>
           <a href="https://github.com/spartanindc/countdown"
-            >[Code<i class="devicon-github-plain"></i>]</a
+            >{Code<i class="devicon-github-plain"></i>}</a
           ><a href="https://countdown-thinkful.herokuapp.com/">Live Site</a>
         </div>
 
         <div class="project">
-          <h3>Fantasy Baseball Player Lookup</h3>
+          <h4>Fantasy Baseball Player Lookup</h4>
           <img src="./images/fbpl.png" alt="FBPL home page" />
           <p>
             Using MySportsFeeds API to pull relevant baseball stats information
@@ -83,7 +94,7 @@
             <li>jQuery <i class="devicon-jquery-plain-wordmark"></i></li>
           </ul>
           <a href="https://github.com/spartanindc/fantasybaseballlookup"
-            >[Code<i class="devicon-github-plain"></i>]</a
+            >{Code<i class="devicon-github-plain"></i>}</a
           ><a href="https://spartanindc.github.io/fantasybaseballlookup"
             >Live Site</a
           >
