typos, link fixing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </p>
           <br />
           <p>
-            When i'm not coding, i'm reading fantasy or science fiction novels,
+            When I'm not coding, I'm reading fantasy or science fiction novels,
             playing board games or video games, or trying to find time to write
             the novel that's been in my head for a few years.
           </p>
@@ -54,9 +54,11 @@
             <li>Mongoose</li>
             <li>Express <i class="devicon-express-original"></i></li>
           </ul>
-          <a href="https://github.com/spartanindc/LFG"
+          <a href="https://github.com/spartanindc/LFG" target="_blank"
             >{Code<i class="devicon-github-plain"></i>}</a
-          ><a href="https://lfg-thinkful.herokuapp.com/">Live Site</a>
+          ><a href="https://lfg-thinkful.herokuapp.com/" target="_blank"
+            >Live Site</a
+          >
         </div>
 
         <div class="project">
@@ -74,9 +76,11 @@
             <li>Mongoose</li>
             <li>Express <i class="devicon-express-original"></i></li>
           </ul>
-          <a href="https://github.com/spartanindc/countdown"
+          <a href="https://github.com/spartanindc/countdown" target="_blank"
             >{Code<i class="devicon-github-plain"></i>}</a
-          ><a href="https://countdown-thinkful.herokuapp.com/">Live Site</a>
+          ><a href="https://countdown-thinkful.herokuapp.com/" target="_blank"
+            >Live Site</a
+          >
         </div>
 
         <div class="project">
@@ -93,9 +97,13 @@
             <li>Javascript <i class="devicon-javascript-plain"></i></li>
             <li>jQuery <i class="devicon-jquery-plain-wordmark"></i></li>
           </ul>
-          <a href="https://github.com/spartanindc/fantasybaseballlookup"
+          <a
+            href="https://github.com/spartanindc/fantasybaseballlookup"
+            target="_blank"
             >{Code<i class="devicon-github-plain"></i>}</a
-          ><a href="https://spartanindc.github.io/fantasybaseballlookup"
+          ><a
+            href="https://spartanindc.github.io/fantasybaseballlookup"
+            target="_blank"
             >Live Site</a
           >
         </div>
@@ -124,7 +132,7 @@
     <footer>
       <ul>
         <li>
-          <a href="https://wwww.github.com/spartanindc"
+          <a href="https://github.com/spartanindc" target="_blank"
             ><img
               alt="The Github logo signifying a link to go to David's Github profile"
               src="https://img.icons8.com/nolan/64/000000/github.png"
@@ -138,7 +146,9 @@
           /></a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/david-alim-b4425424"
+          <a
+            href="https://www.linkedin.com/in/david-alim-b4425424"
+            target="_blank"
             ><img
               alt="The LinkedIn logo signifying a link to go to David's LinkedIn profile"
               src="https://img.icons8.com/nolan/64/000000/linkedin.png"
