updating project descriptions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
         <div class="project">
           <h4>Looking for Gamers</h4>
           <img src="./images/lfg.png" alt="LFG example dashboard" />
-          <p>App to help gamers find like-minded people to meet up and play</p>
+          <p>
+            App to help gamers find like-minded people to meet up and play. This
+            app allows users to create a profile and an online library of all
+            the games they own or know how to play. Users can then create their
+            own game sessions to find other players to join them or search for
+            other games to join themselves.
+          </p>
           <ul>
             <p>Built with:</p>
             <li>React <i class="devicon-react-original"></i></li>
@@ -66,7 +72,9 @@
           <img src="./images/countdown.png" alt="Countdown example page" />
           <p>
             An app to keep track of important dates and how much time is left
-            until those dates arrive
+            until those dates arrive. Users can create their own collection of
+            countdown timers, which can be edited or later deleted if no longer
+            needed or relevant.
           </p>
           <ul>
             <p>Built with:</p>
@@ -88,7 +96,9 @@
           <img src="./images/fbpl.png" alt="FBPL home page" />
           <p>
             Using MySportsFeeds API to pull relevant baseball stats information
-            for fantasy players
+            for fantasy players. This tool can help fantasy baseball players
+            find and sort the information they need to make decisions on who to
+            trade for or draft onto their team.
           </p>
           <ul>
             <p>Built with:</p>
