--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
       crossorigin="anonymous"
     ></script>
-    <script src="./js/jquery.sticky-nav.js"></script>
+    <script src="./js/jquery.sticky-nav-1.1.0.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
